--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -1,6 +1,4 @@
-<div
-  class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-monspace"
->
+<div class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-monspace">
   <p> Choose Your Genre </p>
 </div>
 
@@ -9,7 +7,7 @@
     <div class="row no-gutters">
       <div class="col-md-4">
         <img
-          src="../public/images/Something-was-wrong-pod.jpg"
+          src="../../images/Something-was-wrong-pod.jpg"
           class="card-img"
           alt="Entertainment"
         />
@@ -25,4 +23,3 @@
     </div>
   </div>
 {{/each}}
-
