edit template to use date formatter, add helper to hbs engine

--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -28,7 +28,7 @@
               by
               {{com.user.username}}
               at
-              {{com.createdAt}}
+              {{date_format com.createdAt}}
             </p>
           </li>
         {{/each}}
