featured podcast cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,3 +24,8 @@
 .footer {
   position: relative;
 }
+
+#genre-image {
+  background-image: url("../images/genre-card.jpg");
+  object-fit: contain;
+}
