--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -1,3 +1,12 @@
+<div class="d-flex justify-content-center error">
+  <img src="public/images/404-PF.jpg" alt="" />
+</div>
+
+<div>
+  <p class="fs-4 font-monospace text-center">Oops! Looks like something went
+    terribly wrong... Go ahead a try again!</p>
+</div>
+
 <div
   class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-family-sans-serif"
 >
