--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -95,13 +95,11 @@
 >
   <div class="card w-75" id="genre-image">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to
-        additional content.</p>
-      <a href="#" class="btn btn-primary">Button</a>
+      <h5 class="card-title fs-2 text-light text-center">See all Genres</h5>
+
+      <a href="/genres" class="btn btn-outline-light">Explore</a>
     </div>
   </div>
-</div>
 
 <div
   class="container bg-secondary p-2 mb-5 mt-5 break text-dark bg-opacity-10"
