--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -91,13 +91,19 @@
 <!-- GENRES CARD-->
 
 <div
-  class="d-flex justify-content-center genre-card h-75 w-100 justify-content-sm-center"
+  class="d-flex justify-content-center genre-card h-75 w-100 justify-content-sm-center "
 >
-  <div class="card w-75" id="genre-image">
-    <div class="card-body">
+  <div class="card w-75  genre-card h-75 w-100 justify-content-sm-center" id="genre-image">
+    <div class="card-body ">
+      <div class="">
       <h5 class="card-title fs-2 text-light text-center">See all Genres</h5>
-
-      <a href="/genres" class="btn btn-outline-light">Explore</a>
+    <p class="lead text-center">
+      <a
+        class="btn btn-outline-light btn-lg mt-4 mb-5"
+        href="/genres"
+        role="button"
+      >Explore</a>
+    </p>
     </div>
   </div>
 
