--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,67 +5,81 @@
   {{#if comments.length}}
   <!--box for comment-->
   <div class="container mt-5">
-        <div class="d-flex justify-content-center row">
-           <div class="col-md-8">
-             <div class="d-flex flex-column comment-section">
-               <div class="bg-white p-2">
-                 <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg" width="40">
-                                         <div class="d-flex flex-column justify-content-start ml-2"><span class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span></div>
-                    </div>
-                                        <div class="mt-2">
-                        <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
-    <ol>
-      {{#each comments}}
-        <li>
-          <h5>{{title}}</h5>
-          <p>{{comment_text}}</p>
-          <a href="/podcasts/{{podcast.id}}">{{podcast.title}}</a>
-        </li>
-      {{/each}}
-    </ol>
+    <div class="d-flex justify-content-center row">
+      <div class="col-md-8">
+        <div class="d-flex flex-column comment-section">
+          <div class="bg-white p-2">
+            <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg" width="40">
+              <div class="d-flex flex-column justify-content-start ml-2"><span
+                  class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span></div>
+            </div>
+            <div class="mt-2">
+              <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+          <ol>
+            {{#each comments}}
+            <li>
+              <h5>{{title}}</h5>
+              <p>{{comment_text}}</p>
+              <a href="/podcasts/{{podcast.id}}">{{podcast.title}}</a>
+            </li>
+            {{/each}}
+          </ol>
+        </div>
+      </div>
     </div>
-    </div>
-    </div>
-    </div>
-    </div>
+  </div>
+  </div>
   {{else}}
-    <h5 class="text-secondary text-center text-opacity-50 font-monospace">You have no comments!</h5>
+  <h5 class="text-secondary text-center text-opacity-50 font-monospace">You have no comments!</h5>
   {{/if}}
 </section>
 
 <div class="container mt-5">
-    <div class="d-flex justify-content-center row">
-        <div class="col-md-8">
-            <div class="d-flex flex-column comment-section">
-                <div class="bg-white p-2">
+  <div class="d-flex justify-content-center row">
+    <div class="col-md-8">
+      <div class="d-flex flex-column comment-section">
+        <div class="bg-white p-2">
 
-                    <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg" width="40">
-                        <div class="d-flex flex-column justify-content-start ml-2"><span class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span></div>
-                    </div>
-                    <div class="mt-2">
-                        <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
+          <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg" width="40">
+            <div class="d-flex flex-column justify-content-start ml-2"><span
+                class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span></div>
+          </div>
+          <div class="mt-2">
+            <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
 
-<div class="container mt-5">
-    <div class="d-flex justify-content-center row">
-        <div class="col-md-8">
-            <div class="d-flex flex-column comment-section">
+        <div class="container mt-5">
+          <div class="d-flex justify-content-center row">
+            <div class="col-md-8">
+              <div class="d-flex flex-column comment-section">
                 <div class="bg-white p-2">
-                    <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg" width="40">
-                        <div class="d-flex flex-column justify-content-start ml-2"><span class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span></div>
+                  <div class="d-flex flex-row user-info"><img class="rounded-circle" src="/images/404-PF.jpg"
+                      width="40">
+                    <div class="d-flex flex-column justify-content-start ml-2"><span
+                        class="d-block font-weight-bold name">You</span><span class="date text-black-50">DATE</span>
                     </div>
-                    <div class="mt-2">
-                        <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
+                  </div>
+                  <div class="mt-2">
+                    <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  </div>
                 </div>
 
                 <div class="bg-light p-2">
-                    <div class="d-flex flex-row align-items-start"><textarea class="form-control ml-1 shadow-none textarea"></textarea></div>
-                    <div class="mt-2 text-right"><button class="btn btn-dark btn-sm shadow-none" type="button">Post comment</button><button class="btn btn-outline-dark btn-sm ml-1 shadow-none" type="button">Cancel</button></div>
+                  <div class="d-flex flex-row align-items-start"><textarea
+                      class="form-control ml-1 shadow-none textarea"></textarea></div>
+                  <div class="mt-2 text-right"><button class="btn btn-dark btn-sm shadow-none" type="button">Post
+                      comment</button><button class="btn btn-outline-dark btn-sm ml-1 shadow-none"
+                      type="button">Cancel</button></div>
                 </div>
+              </div>
             </div>
-        </div>
-    </div>
+          </div>
