--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -89,11 +89,11 @@
 <div class="container bg-secondary p-2 mb-5 mt-5 text-dark bg-opacity-10"></div>
 
 <!-- GENRES CARD-->
-
+{{!-- h-75 w-100  h-50 w-100  w-75 --}}
 <div
-  class="d-flex justify-content-center genre-card h-75 w-100 justify-content-sm-center "
+  class="d-flex justify-content-center genre-card justify-content-sm-center "
 >
-  <div class="card w-75  genre-card h-75 w-100 justify-content-sm-center" id="genre-image">
+  <div class="card  genre-card justify-content-sm-center" id="genre-image">
     <div class="card-body ">
       <div class="">
       <h5 class="card-title fs-2 text-light text-center">See all Genres</h5>
@@ -105,6 +105,10 @@
       >Explore</a>
     </p>
     </div>
+  </div>
+
+  <div>
+    <img src="" alt="">
   </div>
 
 <div
