--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -1,6 +1,6 @@
 <section id="podcast-info">
-  <h3>{{podcast.title}}</h3>
-  <h4>Genre: {{podcast.genre.genre_name}}</h4>
+  <p>{{podcast.title}}</p>
+  <P>Genre: {{podcast.genre.genre_name}}</p>
   <p>Description: <br />{{podcast.description}}</p>
 </section>
 <section id="comments">
