--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -91,8 +91,7 @@
 <!-- GENRES CARD-->
 {{!-- h-75 w-100  h-50 w-100  w-75 --}}
 <div
-  class="d-flex justify-content-center genre-card justify-content-sm-center "
->
+  class="d-flex justify-content-center genre-card justify-content-sm-center ">
   <div class="card  genre-card justify-content-sm-center" id="genre-image">
     <div class="card-body ">
       <div class="">
