--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -5,40 +5,49 @@
 </section>
 <section id="comments">
   {{#if loggedIn}}
-    <form id="comment-form">
-      <div>
-        <label for="comment-title">Title</label>
-        <input type="text" id="comment-title" name="comment-title" />
-      </div>
-      <div>
-        <textarea name="comment-content" id="comment-content"></textarea>
-      </div>
-      <button type="submit" id="comment-submit">Add Comment</button>
-    </form>
+  <form class="bg-light p-2" id="comment-form">
+    <div class="d-flex flex-row align-items-start">
+      <label for="comment-title">Title</label>
+      <input class="form-control ml-1 shadow-none textarea" type="text" id="comment-title" name="comment-title" />
+    </div>
+    <div>
+      <textarea class="form-control ml-1 shadow-none textarea" name="comment-content" id="comment-content"></textarea>
+    </div>
+    <div class="mt-2 text-right">
+      <button class="btn btn-dark btn-sm ml-1 shadow-none" type="submit" id="comment-submit">Add Comment</button>
+      <button class="btn btn-outline-dark btn-sm ml-1 shadow-none" type="button">Cancel</button>
+    </div>
+  </form>
   {{/if}}
   <div>
     <h4>Comments:</h4>
     {{#if podcast.comments.length}}
-      <ol>
-        {{#each podcast.comments as |com|}}
-          <li>
-            <h5>{{com.title}}</h5>
-            <p>{{com.comment_text}}
-              <br />
-              by
-              {{com.user.username}}
-              at
-              {{date_format com.createdAt}}
-            </p>
-          </li>
-        {{/each}}
+    <ol>
+      {{#each podcast.comments as |com|}}
+      <li>
+        <h5>{{com.title}}</h5>
+        <p>{{com.comment_text}}
+          <br />
+          by
+          {{com.user.username}}
+          at
+          {{date_format com.createdAt}}
+        </p>
+      </li>
+      {{/each}}
 
-      </ol>
+    </ol>
     {{else}}
-      <h5>No comments yet</h5>
+    <h5>No comments yet</h5>
     {{/if}}
   </div>
 </section>
 {{#if loggedIn}}
-  <script src="/js/comment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
+
+
+{{!-- Style for single podcast page --}}
+
+
+
