--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -28,12 +28,15 @@
   >
     <div class="row">
       <div class="col mt-4 d-flex align-self-stretch">
+       
         <div class="card" style="width: 18rem;">
+           <a href="/podcasts">
           <img
             src="/images/Twin-flames-pod.png"
             class="card-img-top"
             alt="..."
           />
+          </a>
           <div class="card-body">
             <h5 class="card-title">Twin Flames</h5>
             <p class="card-text"><small class="text-muted">Stephanie Beatriz</small></p>
@@ -50,11 +53,13 @@
 
       <div class="col mt-4 d-flex align-self-stretch">
         <div class="card" style="width: 18rem;">
+          <a href="/podcasts">
           <img
             src="/images/lex-fridman-pod.png"
             class="card-img-top"
             alt="..."
           />
+          </a>
           <div class="card-body">
             <h5 class="card-title">Lex Fridman Podcast</h5>
             <p class="card-text"><small class="text-muted">Lex Fridman</small></p>
@@ -68,11 +73,13 @@
 
       <div class="col mt-4 d-flex align-self-stretch">
         <div class="card" style="width: 18rem;">
+          <a href="/podcasts">
           <img
             src="/images/your-mom's-house-pod.webp"
             class="card-img-top"
             alt="..."
           />
+          </a>
           <div class="card-body">
             <h5 class="card-title">Your Mom’s House with Christina P and Tom
               Segura</h5>
