--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -1,5 +1,8 @@
 <section id="podcast-info">
   <p class="text-center fs-1 profile-intro">{{podcast.title}}</p>
+  <div class="mx-auto" style="width: 200px;">
+    <img src="/images/lex-fridman-pod.png" style="max-width: 100%;" class="rounded-circle mx-auto d-block" alt="...">
+  </div>
   <P class="text-center fs-3">Genre: {{podcast.genre.genre_name}}</p>
   <p class="text-center fs-5">Description: <br />{{podcast.description}}</p>
 </section>
