--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -11,6 +11,7 @@
   <form class="bg-light p-2" id="comment-form">
     
     <div>
+      <input class="form-control ml-1 shadow-none textarea mb-2" type="text" id="comment-title" placeholder="title">
       <textarea class="form-control ml-1 shadow-none textarea" name="comment-content" id="comment-content"></textarea>
     </div>
     <div class="mt-2 text-right">
