--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -19,7 +19,7 @@
                   <span class="date text-black-50">{{date_format createdAt}}</span></div>
             </div>
             <div class="mt-2">
-              <p class="comment-text">{{comment_text}}</p>
+              <p>{{comment_text}}</p>
             </div>
           </div>
 
