added path to featured podcasts on home page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
       <div class="col mt-4 d-flex align-self-stretch">
        
         <div class="card" style="width: 18rem;">
-           <a href="/podcasts">
+           <a href="/podcasts/10">
           <img
             src="/images/Twin-flames-pod.png"
             class="card-img-top"
@@ -47,7 +47,7 @@
 
       <div class="col mt-4 d-flex align-self-stretch">
         <div class="card" style="width: 18rem;">
-          <a href="/podcasts">
+          <a href="/podcasts/2">
           <img
             src="/images/lex-fridman-pod.png"
             class="card-img-top"
@@ -67,7 +67,7 @@
 
       <div class="col mt-4 d-flex align-self-stretch">
         <div class="card" style="width: 18rem;">
-          <a href="/podcasts">
+          <a href="/podcasts/8">
           <img
             src="/images/your-mom's-house-pod.webp"
             class="card-img-top"
