edit podcast model, template, seeds

--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -1,7 +1,7 @@
 <section id="podcast-info">
   <p class="text-center fs-1 profile-intro">{{podcast.title}}</p>
   <div class="mx-auto" style="width: 200px;">
-    <img src="/images/lex-fridman-pod.png" style="max-width: 100%;" class="rounded-circle mx-auto d-block" alt="...">
+    <img src="/images/{{podcast.pod_img}}" style="max-width: 100%;" class="rounded-circle mx-auto d-block" alt="...">
   </div>
   <p class="text-center fs-5">Description: <br />{{podcast.description}}</p>
   <P class="text-center fs-3 mt-3">Genre: {{podcast.genre.genre_name}}</p>
