--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -4,7 +4,7 @@
 <div class="card mb-5 text-center" style="max-width: 960px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="../images/genre-pic.jpg" class="card-img" alt="Entertainment" />
+      <img src="../imgaes/genre-pic.jpg" class="card-img" alt="Entertainment" />
     </div>
     <div class="col-md-8 list-group-item-dark">
       <div class="card-body">
